--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
         with:
           host: ${{ secrets.VULTR_HOST }}
           username: ${{ secrets.VULTR_USERNAME }}
-          key: ${{ secrets.VULTR_SSH_KEY }}
+          password: ${{ secrets.VULTR_PASSWORD }}
           script: |
             cd /var/www/silicon4_accounting
             bash deploy.sh
