Add no-cache headers to nginx.conf to prevent HTML template caching

--- a/nginx.conf
+++ b/nginx.conf
@@ -29,6 +29,11 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         
+        # Add no-cache headers for HTML responses to prevent browser caching
+        add_header Cache-Control "no-cache, no-store, must-revalidate, max-age=0" always;
+        add_header Pragma "no-cache" always;
+        add_header Expires "0" always;
+        
         # Timeouts
         proxy_connect_timeout 600s;
         proxy_send_timeout 600s;
