Add CSS build verification and reduce CSS cache time in production

--- a/nginx.conf
+++ b/nginx.conf
@@ -8,6 +8,13 @@ server {
     access_log /var/log/nginx/silicon4_access.log;
     error_log /var/log/nginx/silicon4_error.log;
 
+    # CSS files - shorter cache for easier updates (must come before general /static/ location)
+    location ~* /static/.*\.css$ {
+        alias /var/www/silicon4_accounting/staticfiles/;
+        expires 1h;
+        add_header Cache-Control "public, must-revalidate";
+    }
+    
     # Static files
     location /static/ {
         alias /var/www/silicon4_accounting/staticfiles/;
