--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,12 +16,13 @@ jobs:
         with:
           host: ${{ secrets.VULTR_HOST }}
           username: ${{ secrets.VULTR_USERNAME }}
-          password: ${{ secrets.VULTR_PASSWORD }}
+          key: ${{ secrets.VULTR_SSH_KEY }}
           script: |
-            cd /var/www/silicon4_accounting
+            cd /var/www/insurance
             git fetch origin
             git reset --hard origin/main
             git pull origin main
+            ./deploy.sh
       
       - name: Deployment Status
         if: success()
