--- a/nginx.conf
+++ b/nginx.conf
@@ -1,36 +1,36 @@
 server {
     listen 80;
-    server_name 45.32.55.203;  # Replace SERVER_IP with your actual Vultr server IP
+    server_name _;  # Replace with your actual server IP or domain name
 
     client_max_body_size 100M;
 
     # Logging
-    access_log /var/log/nginx/silicon4_access.log;
-    error_log /var/log/nginx/silicon4_error.log;
+    access_log /var/log/nginx/insurance_access.log;
+    error_log /var/log/nginx/insurance_error.log;
 
     # CSS files - shorter cache for easier updates (must come before general /static/ location)
     location ~* /static/.*\.css$ {
-        alias /var/www/silicon4_accounting/staticfiles/;
+        alias /var/www/insurance/staticfiles/;
         expires 1h;
         add_header Cache-Control "public, must-revalidate";
     }
     
     # Static files
     location /static/ {
-        alias /var/www/silicon4_accounting/staticfiles/;
+        alias /var/www/insurance/staticfiles/;
         expires 30d;
         add_header Cache-Control "public, immutable";
     }
 
     # Media files (if needed)
     location /media/ {
-        alias /var/www/silicon4_accounting/media/;
+        alias /var/www/insurance/media/;
         expires 30d;
     }
 
     # Proxy all other requests to Gunicorn
     location / {
-        proxy_pass http://unix:/var/www/silicon4_accounting/gunicorn.sock;
+        proxy_pass http://unix:/var/www/insurance/gunicorn.sock;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
