--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,26 +18,27 @@ jobs:
           username: ${{ secrets.VULTR_USERNAME }}
           key: ${{ secrets.VULTR_SSH_KEY }}
           script: |
+            set -e
             cd /var/www/insurance
             git config --global --add safe.directory /var/www/insurance || true
             git fetch origin
             git reset --hard origin/main
             git pull origin main
-            # Ensure deploy.sh exists and is executable
+            # Ensure deploy.sh exists
             if [ ! -f "deploy.sh" ]; then
               echo "ERROR: deploy.sh not found!"
               exit 1
             fi
+            # Make it executable
             chmod +x deploy.sh
-            ls -la deploy.sh
             # Check if venv exists, create if not
             if [ ! -d "venv" ]; then
               echo "Creating virtual environment..."
               python3 -m venv venv
             fi
-            # Run deploy script with bash (doesn't require execute permission)
-            echo "Running deployment script..."
-            bash deploy.sh
+            # Run deploy script with bash (explicitly use bash, doesn't need execute permission)
+            echo "Running deployment script with bash..."
+            /bin/bash deploy.sh
       
       - name: Deployment Status
         if: success()
